option('build_adapter_boost_json', type : 'boolean', value : false)
option('build_adapter_njson', type : 'boolean', value : false)
option('build_adapter_rapidjson', type : 'boolean', value : false)

option('build_examples', type : 'boolean', value : false)
option('build_benchmark', type : 'boolean', value : false)
option('build_testing', type : 'boolean', value : false)
